check_workspace_errors.txt
   Compiling gui v0.1.0 (C:\ABC\Github\macronits\gui\src-tauri)
    Checking daemon v0.1.0 (C:\ABC\Github\macronits\crates\daemon)
    Checking cli v0.1.0 (C:\ABC\Github\macronits\crates\cli)
error: failed to run custom build command for `gui v0.1.0 (C:\ABC\Github\macronits\gui\src-tauri)`

Caused by:
  process didn't exit successfully: `C:\ABC\Github\macronits\target\debug\build\gui-261e14047b071a42\build-script-build` (exit code: 101)
  --- stdout
  cargo:rerun-if-env-changed=TAURI_CONFIG
  cargo:rustc-check-cfg=cfg(desktop)
  cargo:rustc-cfg=desktop
  cargo:rustc-check-cfg=cfg(mobile)
  cargo:rerun-if-changed=C:\ABC\Github\macronits\gui\src-tauri\tauri.conf.json
  cargo:rustc-env=TAURI_ANDROID_PACKAGE_NAME_APP_NAME=app
  cargo:rustc-env=TAURI_ANDROID_PACKAGE_NAME_PREFIX=com_macronits
  cargo:rustc-check-cfg=cfg(dev)
  cargo:PERMISSION_FILES_PATH=C:\ABC\Github\macronits\target\debug\build\gui-56e87775974517d4\out\app-manifest\__app__-permission-files
  cargo:rerun-if-changed=capabilities
  cargo:rerun-if-env-changed=REMOVE_UNUSED_COMMANDS
  cargo:rustc-env=TAURI_ENV_TARGET_TRIPLE=x86_64-pc-windows-msvc
  cargo:rerun-if-changed=daemon-x86_64-pc-windows-msvc.exe

  --- stderr

  thread 'main' (27456) panicked at C:\Users\nitan\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tauri-build-2.5.6\src\lib.rs:80:30:
  called `Result::unwrap()` on an `Err` value: Os { code: 5, kind: PermissionDenied, message: "Access is denied." }
  note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
warning: build failed, waiting for other jobs to finish...
error[E0533]: expected value, found struct variant `IpcCommand::ListMacros`
   --> crates\cli\src\commands.rs:146:24
    |
146 |     match send_command(IpcCommand::ListMacros).await? {
    |                        ^^^^^^^^^^^^^^^^^^^^^^ not a value
    |
help: you might have meant to create a new value of the struct
    |
146 -     match send_command(IpcCommand::ListMacros).await? {
146 +     match send_command(IpcCommand::ListMacros { mpr_paths: /* value */, mps_paths: /* value */ }.await? {
    |

error[E0026]: variant `Macros` does not have a field named `names`
   --> crates\cli\src\commands.rs:147:31
    |
147 |         IpcResponse::Macros { names } => {
    |                               ^^^^^
    |                               |
    |                               variant `Macros` does not have this field
    |                               help: `Macros` has a field named `items`

error[E0027]: pattern does not mention field `items`
   --> crates\cli\src\commands.rs:147:9
    |
147 |         IpcResponse::Macros { names } => {
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing field `items`
    |
help: include the missing field in the pattern
    |
147 |         IpcResponse::Macros { names, items } => {
    |                                    +++++++
help: if you don't care about this missing field, you can explicitly ignore it
    |
147 |         IpcResponse::Macros { names, items: _ } => {
    |                                    ++++++++++
help: or always ignore missing fields here
    |
147 |         IpcResponse::Macros { names, .. } => {
    |                                    ++++

Some errors have detailed explanations: E0026, E0027, E0533.
For more information about an error, try `rustc --explain E0026`.
error: could not compile `cli` (bin "cli") due to 3 previous errors
